<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MBQs CPU Guide 2.0</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_exit">Exit</string>
    <string name="welcome">Welcome to MBQs CPU Guide 2.0!</string>
    <string name="slide_right">Slide right to begin.</string>   
        
    <string-array name="Items">
        <item>Welcome</item>
        <item>CPU Governors</item>
        <item>I/O Schedulers</item>
        <item>TCP Algorithms</item>
        <item>Android Tips</item>
        <item>Preferences</item>
    </string-array>

    <string name="add_prop">Add Property</string>
    <string name="save">Save</string>
    <string name="discart">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="edit_key">Property Key</string>
    <string name="edit_name">Property Name</string>
    <string name="edit_prop_title">Edit/Add Property</string>
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_message">Would you like to set this property?</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="edit_build_prop">Edit Build.prop</string>
    <string name="modifications">Modifications</string>
    <string name="holo">Holo</string>
    <string name="holo_light_default_">Holo Light (Default)</string>
    
</resources>
